# todo-app

./: .env.production  .gitignore  DEPLOY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml  release.yml
public/: manifest.webmanifest
scripts/: make-icon-transparent.mjs
src/: App.tsx  MobileApp.tsx  backup.ts  data.ts  imageCache.ts  index.css  lightroom.ts  liveblocks.config.ts  main.tsx  supabase.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/permissions/autogenerated/: set_pip_shortcut.toml  show_main_window.toml
src-tauri/src/: lib.rs  main.rs
src/imports/: svg-hzx9ujz7s0.ts
supabase/.temp/: linked-project.json
supabase/functions/lr-proxy/: index.ts
