[package]
name = "ctrl-project"
version = "0.2.11"
description = "Ctrl-Project — todo + project planner"
authors = ["benno"]
edition = "2021"

# The lib + main split is Tauri 2's recommended layout. lib.rs holds the actual
# `run()` entry point so the same code path is reachable from both the desktop
# binary (main.rs) and a future mobile target via tauri::mobile_entry_point.
# Cargo names use kebab-case but the lib symbol must be a valid Rust ident, so
# the package is `ctrl-project` and the lib symbol is `ctrl_project_lib`.
[lib]
name = "ctrl_project_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# Desktop-only: global shortcut (Ctrl+Win+Space) that toggles the PIP
# quick-view window. The plugin doesn't build for mobile targets, hence the
# cfg-gated dependency table (mirrors the plugin's own install docs).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
# Launch hidden at login so the PIP shortcut works without opening the app.
tauri-plugin-autostart = "2"

[features]
# Enabled at packaging time; the dev build skips it.
custom-protocol = ["tauri/custom-protocol"]
